<resources>
    <string name="app_name">Forecast Weather</string>
    <string name="enter_location_hint">Enter Location</string>
    <string name="location_placeholder_text">Location</string>
    <string name="place_holder_temp">19C</string>
    <string name="temp_placeholder">Temp</string>
    <string name="date_placeholder">Wednesday, Jan. 2018</string>
    <string name="high_temp_placeholder">High</string>
    <string name="low_temp_placeholder">Low</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wether_condition_placeholder">Mostly Cloudy</string>
    <string name="current_date_placeholder">currentDate</string>
</resources>
