<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather"
    android:padding="36dp"
    android:id="@+id/constraintLayoutId2"
    tools:context="com.armstring.weatherapp.ui.MainView.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLayoutId"
        >


        <EditText
            android:id="@+id/edtLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/enter_location_hint"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/unimportantCardView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="@color/backgroundTransparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLocation">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroundTransparent">

                <ImageView
                    android:id="@+id/imgWeatherIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="25dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/imgWeatherIcon"
                    android:text="@string/location_placeholder_text"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_centerVertical="true"
                    android:layout_marginStart="27dp"
                    android:layout_toEndOf="@+id/txtLocation"
                    android:text="@string/place_holder_temp"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txtCurrentDateId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgWeatherIcon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/current_date_placeholder"
                    android:textSize="16sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPagerId"
            android:layout_width="match_parent"
            android:layout_height="283dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="29dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unimportantCardView">

        </android.support.v4.view.ViewPager>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
