<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:id="@+id/cardViewId"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/txtForecastDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtForecastDescription"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/date_placeholder" />

            <LinearLayout
                android:id="@+id/linearLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtForecastDate"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtForecastHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableStart="@android:drawable/arrow_up_float"
                    android:text="@string/high_temp_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtForecastLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableStart="@android:drawable/arrow_down_float"
                    android:text="@string/low_temp_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtForecastDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/wether_condition_placeholder"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="italic"
                />

            <ImageView
                android:id="@+id/imageLeft"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="14dp"
                android:src="@drawable/leftarrow" />

            <ImageView
                android:id="@+id/imageRight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="14dp"
                android:src="@drawable/rightarrow" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>